# CL4AF_to_test

./: .gitignore  analyze.py  temp.py  test_ans.py
CL4AF/: .gitignore  Bitset.cpp  Bitset.h  CMakeLists.txt  Clause.cpp  Clause.h  Heap.cpp  Heap.h  Solver.cpp  Solver.h  label_lib.h  log.h  main.cpp
